# Obsidian-atomizer

./: ANALISE_COMPLETA.md  APPLE_EDITION.md  ARCHITECTURE_PROPOSAL.md  App.tsx  CEREBRUM_README.md  EXAMPLE_AGENT_FLOW.md  FIXES_IMPLEMENTADOS.md  FRAMEWORKS_INTEGRATION.md  IMPLEMENTATION_ROADMAP_ULTIMATE.md  INTEGRATION_VALIDATION.md  MOC_DESIGN.md  ORCHESTRATION_POPS.md  PERSONAL_WORKFLOW_VISION.md  QUICKSTART.md  README.md  README_IMPLEMENTATION.md  START_HERE.md  START_HERE_ULTIMATE.md  STRATEGIC_ROADMAP.md  SYSTEM_STATUS.md  TEMPLATES_EPISTEMIC_ENHANCED.md  V0.4_MAPS_EDITION.md  VISION_MULTI_AGENT.md  VISION_ULTIMATE.md  WEB_UI_DESIGN.md  constants.ts  index.html  metadata.json  package-lock.json  package.json  pyproject.toml  requirements.txt  run-cerebrum-web.sh  types.ts
cerebrum/: README.md  __init__.py  cli.py
cerebrum-web/: README.md  test-backend.sh
cerebrum-web/backend/: requirements.txt
cerebrum-web/frontend/: index.html  package.json  tailwind.config.js
cerebrum/agents/: __init__.py  base.py  distiller.py
cerebrum/core/: classificador.py  conector.py  destilador.py  extractor.py  moc_agent.py  orchestrator.py
cerebrum/intelligence/: __init__.py  llm.py
cerebrum/models/: note.py
cerebrum/services/: llm_service.py
cerebrum/utils/: config.py  templates.py
cerebrum/vault/: __init__.py  (+1 more)
components/: Button.tsx  Header.tsx  HistoryModal.tsx  InputSection.tsx  Modal.tsx  NoteCard.tsx  PreviewSection.tsx  SettingsModal.tsx  SettingsPanel.tsx  TaxonomyModal.tsx  Toast.tsx
services/: atomizerService.ts  geminiService.ts  storageService.ts
(+14 files in other folders)
